--- a/README.rdoc
+++ b/README.rdoc
@@ -7,7 +7,9 @@ After that all nTPL module will be stored in lib folder:
 (nTPL.js, nTPL.block.js, nTPL.filter.js, nTPL.native.node)
 	
 	git clone git@github.com:donnerjack13589/nTPL.git
-	cd nTPL/lib/nTPL.native
+	cd nTPL
+	git checkout dev
+	cd lib/nTPL.native
 	./build.sh
 	cd ../../tests/
 	node run.js
